[package]
name = "fast-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1.0.79"
candle = { version = "0.3.3", package = "candle-core" }
# candle-examples = "0.3.2"
candle-nn = "0.3.3"
candle-transformers = "0.3.3"
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
intel-mkl-src = { version = "0.8.1", optional = true }
metal = { version = "0.27.0", features = ["mps"] }
safetensors = "0.4.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokenizers = { version = "0.15.0", default-features = false, features=["onig"] }
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle/metal", "candle-nn/metal"]
